[package]
name = "remedy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
crossterm = "0.27.0"
colored = "2.0.4"
clap = { version = "4.3.21", features = ["derive"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
anyhow = "1.0.72"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
